--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,10 +1,14 @@
+2.11.44
+    New:
+    + Update code to create Tamara checkout session before use (not create during Magento order creation)
+    + Add a cronjob to authorise approved orders and cancel expired/declined orders automatically
 2.11.43
     New:
-        + Support PAY_BY_FINANCE
+    + Support PAY_BY_FINANCE
 2.11.42
     New:
-        + Change the checkout widget type
-        + Improve code
+    + Change the checkout widget type
+    + Improve code
 2.11.41
     Bug fixed:
     + Fix the issue paymentDisabled.js is not found in Magento dashboard when disabled Tamara in the configuration
